--- a/PA1_template.html
+++ b/PA1_template.html
@@ -201,13 +201,13 @@ hr {
 </head>
 
 <body>
-<p>title: &ldquo;Reproducible Research: Peer Assessment 1&rdquo;
+<p>title: &ldquo;Reproducible Research: Peer Assessment1&rdquo;
 output: 
   html_document:</p>
 
 <h2>    keep_md: true</h2>
 
-<h2>Loading and preprocessing the data</h2>
+<h2>Loading and preprocessing the data.</h2>
 
 <pre><code class="r">setwd(&quot;C:/Users/Adarsh/Desktop/Coursera/repres&quot;)
 y &lt;- read.csv(&quot;activity.csv&quot;, header=TRUE)
