--- a/PA1_template.html
+++ b/PA1_template.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-<title>Loading and preprocessing the data</title>
+<title>Loading and preprocessing the data.</title>
 
 <script type="text/javascript">
 window.onload = function() {
